# score-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  players.json
.github/workflows/: rust-ci.yml
src/: commands.rs  main.rs
src/commands/: add_player.rs  add_score.rs  delete_player.rs  delete_score.rs  list_games.rs  utils.rs
src/commands/models/: game.rs  player.rs
src/commands/utils/: file_wrapper.rs  storage.rs  utils.rs
tests/: add_player.rs  add_score.rs  delete_player.rs  delete_score.rs  list_games.rs
