[package]
name = "score-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
regex = "1"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
    "serde",
]